@@ -1,6 +1,6 @@
 This work was packaged for Debian by:
 
-    Joachim Metz <joachim.metz@gmail.com> on @DATE@
+    Joachim Metz <joachim.metz@gmail.com> on @DPKG_DATE@
 
 It was downloaded from http://code.google.com/p/libclibs/
 
@@ -35,6 +35,6 @@ The Debian packaging is:
 
     Copyright (C) 2008-2012, Joachim Metz <joachim.metz@gmail.com>
 
-and is licensed under the GPL version 3,
-see `/usr/share/common-licenses/GPL-3'.
+and is licensed under the GNU Lesser General Public License,
+see `/usr/share/common-licenses/LGPL-3'.
 
