@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: libuna
+Description: Library to support cross-platform C notification functions
+Version: @VERSION@
+Libs: -L${libdir} -lcnotify
+Libs.private: @ax_libcerror_libs_private@ @ax_libcstring_libs_private@ 
+Cflags: -I${includedir}
+
