@@ -38,9 +38,9 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcstring"
+				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcstring;..\..\libcerror"
 				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCSTRING;HAVE_LOCAL_LIBCERROR;LIBCNOTIFY_DLL_EXPORT"
-				SmallerTypeCheck="true"
+				SmallerTypeCheck="false"
 				RuntimeLibrary="2"
 				WarningLevel="4"
 			/>
@@ -107,7 +107,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcstring"
+				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcstring;..\..\libcerror"
 				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCSTRING;HAVE_LOCAL_LIBCERROR;LIBCNOTIFY_DLL_EXPORT"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="true"
@@ -169,7 +169,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\libcnotify\libcnotify_error.c"
+				RelativePath="..\..\libcnotify\libcnotify_print.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libcnotify\libcnotify_stream.c"
 				>
 			</File>
 			<File
@@ -177,7 +181,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\libcnotify\libcnotify_system.c"
+				RelativePath="..\..\libcnotify\libcnotify_verbose.c"
 				>
 			</File>
 		</Filter>
@@ -191,11 +195,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\libcnotify\libcnotify_error.h"
+				RelativePath="..\..\libcnotify\libcnotify_extern.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libcnotify\libcnotify_extern.h"
+				RelativePath="..\..\libcnotify\libcnotify_libcerror.h"
 				>
 			</File>
 			<File
@@ -203,11 +207,15 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\libcnotify\libcnotify_support.h"
+				RelativePath="..\..\libcnotify\libcnotify_print.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libcnotify\libcnotify_system.h"
+				RelativePath="..\..\libcnotify\libcnotify_stream.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libcnotify\libcnotify_support.h"
 				>
 			</File>
 			<File
@@ -216,6 +224,10 @@
 			</File>
 			<File
 				RelativePath="..\..\libcnotify\libcnotify_unused.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libcnotify\libcnotify_verbose.h"
 				>
 			</File>
 		</Filter>
